tests/diagnostics/declarations/constants/duplicate_name/expect.txt
# exit: 1
lib.coppice:2:1: error: duplicate constant 'FOO'
  FOO := 2
  ^
